CHANGES IN VERSION 1.18.0
-------------------------

BUG FIXES

    o assays(se, withDimnames=TRUE) <- value no longer tries to access
      a slot 'withDimnames'.

CHANGES IN VERSION 1.16.0
-------------------------

NEW FEATURES

    o Add "subset" method for SummarizedExperiment objects.

    o Allow DataFrame in SummarizedExperiment assays.

    o Add 'use.mcols' arg (FALSE by default) to the granges(), grglist(), and
      rglist() generics (a.k.a. the range-squeezer generics).

    o Add coercion method from GRangesList to RangesList.

    o Add score() setter for GRangesList objects.

    o findOverlaps(..., type="within") now works on circular chromosomes.

    o Add 'ignore.strand' arg to "sort" method for GRanges objects.

    o Support subsetting of a named list-like object *by* a GenomicRanges
      subscript.

    o Support sort(granges, by = ~ score), i.e., a formula-based interface for
      sorting by the mcols.

SIGNIFICANT USER-LEVEL CHANGES

    o Move many functionalities to the new GenomicAlignments package:
      - The GAlignments, GAlignmentPairs, and GAlignmentsList classes.
      - The qnarrow() generic and methods.
      - The "narrow" and "pintersect" methods for GAlignments and
        GAlignmentsList objects.
      - The low-level CIGAR utilities.
      - The "findOverlaps" methods for GAlignment* objects.
      - The summarizeOverlaps() generic and methods, and the "Counting reads
        with summarizeOverlaps" vignette.
      - findCompatibleOverlaps() and countCompatibleOverlaps().
      - The findSpliceOverlaps() generic and methods.
      - The "overlap encodings" stuff i.e. the "encodeOverlaps" method for
        GRangesList objects, flipQuery(), selectEncodingWithCompatibleStrand(),
        isCompatibleWithSplicing(), isCompatibleWithSkippedExons(),
        extractSteppedExonRanks(), extractSpannedExonRanks(),
        extractSkippedExonRanks(), and extractQueryStartInTranscript(), and
        the "OverlapEncodings" vignette.
